--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
